<resources>
    <string name="app_name">Course</string>
    <string name="login">登陆</string>
    <string name="register">注册</string>
    <string name="goRegister">暂无账号，前往注册</string>
    <string name="user_name_field">用户名:</string>
    <string name="user_password_field">密码:</string>
    <string name="user_password_confirm">确认密码</string>
    <string name="user_name_tip">1-12位数字/字母/符号/汉字组合</string>
    <string name="user_password_tip">6位数字组合</string>
    <string name="user_name_enter_wrong">用户名或密码错误，请重新输入</string>
    <string name="user_name_format_wrong">用户名或密码不满足系统要求，请重新输入</string>
    <string name="user_register_success">恭喜您，注册成功</string>
    <string name="user_name_empty_tip">用户名为空</string>
    <string name="user_password_empty_tip">密码为空</string>
    <string name="user_password_is_different">两次输入的密码不相同</string>
    <string name="user_noExist_tip">用户不存在</string>

    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
</resources>
